assets/stylesheets/main.css
.sidenav {
  height: 100%;
  width: 15%; 
  position: fixed; 
  z-index: 1; 
  top: 0;
  left: 0;
    background-color: #111;   
  overflow-x: hidden; 
  padding-top: 20px;
}
.sidenav-content{
  margin-top: 200px;
}
.dropbtn {
  background-color: #131413;
  color: white;
  padding: 16px;
  font-size: 16px;
  border: none;
  width: 210%;
}
.display-3{

  position: absolute;
  left: 90%;
  bottom: 0%;
  display: none; 

}
.display-x {
  margin-left: 50%;
  font-size: 2.5rem;
}

#project-form{
margin-top: 30px;
}
.projects
{
  cursor: pointer;
}
#description{
  width: 79%;
}
#task-form {
  background: gray;
  padding: 30px 0 50px 0px;
  border-radius: 10px;
  margin-left: auto;
  margin-right: auto;
  box-shadow: 50px  rgba(0,0,0,0.2);
  z-index: 100;
  padding: 10px;
  display: none; 
  position: fixed; 
  z-index: 1; 
  padding-top: 50px; 
  left: 0;
  top: 0;
  width: 100%; 
  height: 100%; 
  overflow: auto; 
  background-color: rgb(0,0,0);
  background-color: rgba(0,0,0,0.4); 
}
.content{
  background-color: #fefefe;
  margin: auto;
  padding: 20px;
  border: 1px solid #888;
  width: 35%;
  border-radius: 25px;
}
.close{
  color: #aaaaaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}
.close:hover,
.close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;}
#task-form h1{
  font-size: 1.5rem;
}
#task-form input{
  width: 80%;
 align-self: center;
}
table {
  margin-left: 20%;
  margin-top: 15px;
}

.add-task {
  cursor: pointer;
  margin-left: 20%;
  margin-top: 15px;
}



#section-1{
 
  margin-left: 20%;
}
.btn-task {
  cursor: pointer;
 }

@media (max-width: 676px){
  .sidenav {
    width: 30%;
  }
  .display-x {
    font-size: 1.5rem;
  }
  #task-form {
    margin-left: 18%;
  }
  
}

